# subgraph-sat-solver

./: .gitignore  CMakeLists.txt  Cnf.cpp  Cnf.h  README.md  Reduction.cpp  Reduction.h  SubgraphSATSolver.cpp  SubgraphSATSolver.h  cnf.cpp  cnf.h  main.cpp  reduction.cpp  reduction.h  sat_main.cpp  subgraph_sat_solver.cpp  subgraph_sat_solver.h
doc/: report.md  tests.txt
tests/: TestCnf.cpp  test_cnf.cpp
